--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(pluses)
 
 set(CMAKE_CXX_FLAGS, "-O2 -Wall -Werror -Wpedantic -m64 -fsanitize=leak,undefined,address")
 
-add_executable(main code/1/1.cpp)
+add_executable(main 1/1.cpp)
