--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,6 @@ project(pluses)
 
 set(CMAKE_CXX_FLAGS, "-O2 -Wall -Werror -Wpedantic -m64 -fsanitize=leak,undefined,address")
 
-add_executable(main 1/1.cpp)
+add_executable(1 1/1.cpp)
+add_executable(2 2/2.cpp)
+add_executable(3 3/3.cpp)
