--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,3 +6,4 @@ set(CMAKE_CXX_FLAGS, "-O2 -Wall -Werror -Wpedantic -m64 -fsanitize=leak,undefine
 add_executable(1 1/1.cpp)
 add_executable(2 2/2.cpp)
 add_executable(3 3/3.cpp)
+add_executable(4 4/4.cpp)
