--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,3 +10,6 @@ add_executable(4 4/4.cpp)
 add_executable(5 5/5.cpp)
 add_executable(6 6/6.cpp)
 add_executable(7 7/7.cpp)
+add_executable(8 8/8.cpp)
+add_executable(9 9/9.cpp)
+add_executable(10 10/10.cpp)
