--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,4 +12,5 @@ add_executable(6 6/6.cpp)
 add_executable(7 7/7.cpp)
 add_executable(8 8/8.cpp)
 add_executable(9 9/9.cpp)
-add_executable(10 10/10.cpp)
+add_executable(10_1 10/10_1.cpp)
+add_executable(10_2 10/10_2.cpp)
