--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,4 +17,5 @@ add_executable(10_2 10/10_2.cpp)
 add_executable(11_1 11/11_1.cpp)
 add_executable(11_2 11/11_2.cpp)
 
+find_package(cpr REQUIRED)
 target_link_libraries(11 cpr)
